--- a/renovate.json
+++ b/renovate.json
@@ -1,1 +1,3 @@
-{}
+{
+    "commitBody": "{{{ toJSON (toObject 'upgrades' upgrades 'others' (toArray sourceRepo sourceUrl repository platform )) }}}",
+}
