--- a/renovate.json
+++ b/renovate.json
@@ -1,3 +1,3 @@
 {
-    "commitBody": "{{{ toJSON (toObject 'upgrades' upgrades 'others' (toArray sourceRepo sourceUrl repository platform )) }}}"
+    "commitBody": "{{{ toJSON (toObject 'upgrades' upgrades 'others' (toArray sourceRepo sourceUrl repository (toObject 'foo' 'bar') )) }}}"
 }
