--- a/renovate.json5
+++ b/renovate.json5
@@ -3,5 +3,5 @@
     // so unable to get `upgrades` object at prBodyNotes
     "prBodyNotes": "{{{ toJSON (toObject 'currentVersion' currentVersion 'newVersion' newVersion 'others' (toArray sourceRepo sourceUrl repository (toObject 'foo' 'bar') )) }}}",
     
-    "commitBody": "My-Metadata: {{{encodeBase64 (toJSON (toObject 'upgrades' upgrades 'others' (toArray sourceRepo sourceUrl repository (toObject 'foo' 'bar')))) }}}"
+    "commitBody": "My-Metadata: {{{encodeBase64 (toJSON (toObject 'upgrades' upgrades 'baseBranch' upgrades.0.baseBranch 'others' (toArray sourceRepo sourceUrl repository (toObject 'foo' 'bar')))) }}}"
 }
