--- a/renovate.json5
+++ b/renovate.json5
@@ -4,6 +4,6 @@
     "prBodyNotes": "{{{ toJSON (toObject 'currentVersion' currentVersion 'newVersion' newVersion 'others' (toArray sourceRepo sourceUrl repository (toObject 'foo' 'bar') )) }}}",
     
     // "commitBody": "My-Metadata: {{{encodeBase64 (toJSON (toObject 'upgrades' upgrades 'baseBranch' upgrades.0.baseBranch 'others' (toArray sourceRepo sourceUrl repository (toObject 'foo' 'bar')))) }}}"
-    "commitBody": "{{{ toJSON (toObject 'key' 'value' 'list1' (toArray 'foo' 'bar')) }}}"
+    "commitBody": "{{{ toJSON (toObject 'key' 'value' 'array' (toArray 'foo' 'bar')) }}}"
 
 }
